--- a/index.html
+++ b/index.html
@@ -26,6 +26,18 @@
                 <img src="./assets/icon-arrow-down.svg" alt="arrow-down" />
               </div>
             </div>
+            <div class="image-container">
+              <img
+                src="./assets/desktop/image-header.jpg"
+                alt="image header"
+                class="hero__img-desktop"
+              />
+              <img
+                src="./assets/mobile/image-header.jpg"
+                alt="image header"
+                class="hero__img-mobile"
+              />
+            </div>
           </div>
         </section>
       </div>
